fix: Resolve BUG nama tidak muncul di alfagroup

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ DB_PASSWORD=
 MIDTRANS_MERCHANT_ID=
 MIDTRANS_CLIENT_KEY=
 MIDTRANS_SERVER_KEY=
+MIDTRANS_IS_PRODUCTION=false
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
